--- a/package.json
+++ b/package.json
@@ -3,9 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "formik": "^1.5.7",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-markdown": "^4.1.0",
+    "react-scripts": "3.0.1",
+    "reselect": "^4.0.0",
+    "rmwc": "^5.5.2",
+    "yup": "^0.27.0"
   },
   "scripts": {
     "start": "react-scripts start",
