--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "final-form": "^4.18.1",
     "formik": "^1.5.7",
     "gh-pages": "^2.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-final-form": "^6.3.0",
     "react-markdown": "^4.1.0",
     "react-scripts": "3.0.1",
     "react-syntax-highlighter": "^11.0.2",
