--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "private": true,
   "dependencies": {
     "final-form": "^4.18.1",
+    "final-form-arrays": "^3.0.0",
     "formik": "^1.5.7",
     "gh-pages": "^2.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-final-form": "^6.3.0",
+    "react-final-form-arrays": "^3.1.0",
     "react-markdown": "^4.1.0",
     "react-scripts": "3.0.1",
     "react-syntax-highlighter": "^11.0.2",
