--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-final-form-arrays": "^3.1.0",
     "react-markdown": "^4.1.0",
     "react-scripts": "3.0.1",
+    "react-spinkit": "^3.0.0",
     "react-syntax-highlighter": "^11.0.2",
     "reselect": "^4.0.0",
     "rmwc": "^5.5.2",
